# mondial-xi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  RISK_REGISTER.md  TASKS.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  daily-refresh.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 468e3fc872e0_prediction_snapshots_baseline.py
apps/api/kickoff_api/: db.py  errors.py  helpers.py  main.py  settings.py  snapshots.py  state.py
apps/api/kickoff_api/routers/: fixtures.py  models_meta.py  players.py  predictions.py  simulations.py  system.py  teams.py  tournaments.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  shot.mjs  vitest.config.ts
apps/web/__tests__/: components.test.tsx  format.test.ts  scenario.test.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  nav.tsx  not-found.tsx  page-transition.tsx  page.tsx  providers.tsx
apps/web/components/: bracket.tsx  elo-chart.tsx  fixtures.tsx  pitch.tsx  prediction.tsx  scenario-controls.tsx
apps/web/e2e/: journeys.spec.ts  screenshots.spec.ts
data/: README.md  kickoff.db
data/fixtures/: goalscorers_core8.csv  matches_core8.csv  matches_edge.csv  matches_wc2022.csv  teams.csv
data/manifests/: data_quality.json  former_names.json  goalscorers.json  results.json  shootouts.json  wikidata_players.json  wikipedia.json
data/tournaments/: wc2026.json  wc2030.json
docs/: PERFORMANCE.md  architecture.md  availability-model.md  data-card.md  data-source-evaluation.md  deployment.md  engineering-guide.md  interview-guide.md  methodology.md  model-card.md  player-model.md  portfolio-case-study.md  provider-setup.md  resume-bullets.md  security.md  tournament-rules.md
docs/research/: assets-and-stack.md  providers.md  wc2026.md  wc2030.md
infrastructure/: api.Dockerfile  web.Dockerfile
ml/: pyproject.toml
ml/artifacts/: aging_calibration.json  calibration.json  current_ratings.json  elo_tuning.json  metrics.json  model_card.json  model_comparison.json
ml/kickoff_ml/: config.py
ml/kickoff_ml/entities/: teams.py
ml/kickoff_ml/evaluation/: metrics.py  run.py
ml/kickoff_ml/features/: builder.py
ml/kickoff_ml/ingestion/: build.py  download.py  wikidata_players.py  wikipedia.py
ml/kickoff_ml/models/: goals.py  outcome.py  players.py  service.py
ml/kickoff_ml/providers/: base.py  football_data.py  local.py  weather.py
ml/kickoff_ml/ratings/: elo.py
ml/kickoff_ml/simulation/: aging.py  engine.py  qualifiers.py  summary.py  wc2026_state.py  wc2030.py
scripts/: calibrate_aging.py  make_test_fixtures.py  run_snapshots.py  update_readme_metrics.py  wikidata_topup.py
tests/integration/: test_api.py  test_prediction_service.py  test_snapshot_guard.py
tests/unit/ml/: conftest.py  test_aging.py  test_career_enrichment.py  test_elo.py  test_ensemble.py  (+7 more)
(+14 files in other folders)
