[project]
name = "kickoff-atlas"
version = "0.1.0"
description = "Kickoff Atlas — international football forecasting & tournament simulation (workspace root)"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["ml", "apps/api"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ml", "apps/api"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# RUF001-003: en dashes in prose ("Dixon–Coles", date ranges) are intentional.
# RUF007: zip(a[:-1], a[1:]) reads fine for bin edges.
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF007"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
