[project]
name = "kickoff-ml"
version = "0.1.0"
description = "Kickoff Atlas ML: ingestion, features, ratings, models, evaluation, simulation"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.17",
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "pydantic>=2.9",
    "joblib>=1.4",
    "httpx>=0.27",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kickoff_ml"]
