[project]
name = "kickoff-api"
version = "0.1.0"
description = "Kickoff Atlas API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "structlog>=24.4",
    "kickoff-ml",
]

[tool.uv.sources]
kickoff-ml = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kickoff_api"]
